v2.7.9   - Bug fixed start frame on BG image, which would offset by 1 
	   frame.
	 - Added display of FG and BG images to title bar.  Previously,
	   this would only be used when edl was on.
	 - Improved performance of seek in video playback and scrubbing.
	 - Improved performance of reverse playback.

v2.7.8   - Fixed hangs and crashes on playback of single images in EDL.
	 - Fixed file requester not showing negative frames correctly.
	 - Fixed file association for jpg, png, tiff, and others on Linux 
	   installers.
	 - Fixed ImageMagick saving.  Gamma is baked in instead of passed
	   to image attribute.
	 - Made ImageMagick loader load all images as gamma 1.0, 
	   regardless, as it incorrectly tags images as gamma 0.4545.
	 - Fixed Clone Image crash due to wrong path check.
	 - Fixed Clone Image not cloning CTL's IDT transform.
	 - Internal images like SMPTE color bars don't start with a RRT.
	 - When saving, if LUT is active, ACES Metadata saving is turned 
	   on. If LUT is not active, ACES Metadata is turned off.

v2.7.7   - Clamped values of ITU 709 as it could result in overflows and
	   saturated colors.
	 - Windows64 version of mrViewer was distributed with 16bits
	   ImageMagick instead of 32 bits HDRI.
	 - Added sun raster images to mime types under Linux.
	 - Bug fixed streams' duration to not be always 200 seconds, but
	   the real duration.
	 - Streams duration are shown as frames, seconds and time instead
	   of seconds and time only.
	 - Bug fixed openexr loader with lumma as it was trashing memory
	   and possibly hanging the viewer. This also makes the loader a tad
	   faster.
	 - Made R,G,B,A,L,Z hotkeys default to main channels only.
	   Previously they would randomly change depending on what
	   channel was selected.
	 - Made LUT not include image in lut path, so multiple images
	   can share the same lut.  This makes it calculate less luts per
	   invocation.

v2.7.6   - Fixed LUT comparison of two images.  Previously, LUT could turn