@@ -4,6 +4,9 @@ v2.7.9   - Bug fixed start frame on BG image, which would offset by 1
 	   this would only be used when edl was on.
 	 - Improved performance of seek in video playback and scrubbing.
 	 - Improved performance of reverse playback.
+	 - Reverse playback is bug fixed to not show temporary frames.
+	 - Reverse playback is now frame accurate, instead of being
+	   shifted by one frame.
 
 v2.7.8   - Fixed hangs and crashes on playback of single images in EDL.
 	 - Fixed file requester not showing negative frames correctly.
